# nostr-noop-relays-wasm

./: .gitignore  LICENSE  README.md
wasix/: Cargo.toml  README.md
wasix/src/: multi_thread.rs
wasmedge/: Cargo.toml  README.md
wasmedge-go/: Makefile  README.md  go.mod  go.sum  main.go
wasmedge-go/nostr/: nostr.go  nostr_test.go
wasmedge-rust/: README.md
wasmedge-rust/src/: main.rs
wasmtime-rust/: Cargo.toml  README.md
wasmtime-rust-wstd/: Cargo.toml
wasmtime-rust/.cargo/: config.toml
wasmtime-rust/src/: main.rs
wstd/: Cargo.toml  README.md
wstd/src/: main.rs
