[package]
name = "noop-nrelay-wasix"
version = "0.0.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
tokio = { version = "=1.47.0", default-features = false, features = ["full"] }
tokio-tungstenite = "0.21.0"
serde_json = "1.0.108"
valq = "0.1.0"

[patch.crates-io]
libc = { git = "https://github.com/wasix-org/libc.git" }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.47.0" }

[[bin]]
name = "noop-nrelay-wasix"
path = "src/single_thread.rs"

[[bin]]
name = "noop-nrelay-wasix_multi-thread"
path = "src/multi_thread.rs"
