[package]
name = "noop-nrelay-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["rt", "macros", "net", "time", "io-util"] }
tokio-tungstenite = { version = "0.21.0", default-features = false, features = ["handshake"]}
valq = "0.1.0"
